bk_ida/gccida/c3/store_parm_decls
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/c-decl.c:6930:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v1; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/c-decl.c:6936:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/c-decl.c:6937:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/c-decl.c:6939:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/c-decl.c:6946:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/c-decl.c:6950:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/c-decl.c:6959:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/c-decl.c:6960:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // r13 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/c-decl.c:6961:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/c-decl.c:6963:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v34; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/c-decl.c:6967:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v38; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/c-decl.c:6969:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *section_name; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/c-decl.c:6970:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v41; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/c-decl.c:6974:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v45; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/c-decl.c:6977:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v48; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/c-decl.c:6981:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *pending_sizes; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/c-decl.c:6987:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v58; // [rsp+18h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/c-decl.c:7023:20: error: expected expression
v10 = ( tree_node *)p_chain[4]; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/c-decl.c:7023:9: error: use of undeclared identifier 'tree_node'
v10 = ( tree_node *)p_chain[4]; 
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_parm_decls/src/obj/c-decl.o] Error 1
